src/static/css/style.css
/* ... */
.status .sold .circle {
    background-color: var(--sold-color);
}

.appartment-block {
    margin-top: 140px;
}

.appartment-info .title p:first-child,
.appartment-info .title .rooms-count {
    font-weight: 500;
    font-size: 24px;
    color: #424242;
}

.appartment-info .title .room-class {
    font-size: 48px;
    color: #2dccff;
    font-weight: 500;
    line-height: 46px;
}

.appartment-info figure p {
    font-size: 26px;
    font-weight: 500;
    color: #424242;
    line-height: 100%;
}

.appartment-info button.button {
    width: 60%;
}

.appartment-plan {
    width: 100%;
}

.appartment-slider {
    width: 90%;
}

.appartment-plan img {
    width: 100%;
}

.slider .images {
    position: relative;
}

.slider .images {
    position: relative;
}

.appartment-slider .images {
    height: 250px;
}

.slider .images img {
    max-width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    transition-duration: 500ms;
}

.slider .images img {
    opacity: 0;
    z-index: -3;
}

.slider .images img.selected {
    opacity: 1;
    z-index: 1;
}

/* Информационные блоки */
section.info {
    margin-top: 120px;
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: #f4f6fb;
}

section.info hr {
    height: 100px;
    width: 4px;
    background-color: #c8cddb;
    border: none;
    position: absolute;
    right: 0;
    top: 20%;
    display: none;
}

.num {
    font-weight: 500;
    font-size: 72px;
    color: #2dccff;
}

.num-desc {
    font-weight: 500;
    font-size: 36px;
    color: #424242;
}

.location {
    margin-top: 100px;
}

.location-slider .images {
    width: 350px;
    height: 280px;
}

.location .intro {
    font-size: 22px;
    font-weight: 500;
    color: #434343;
    margin-top: 40px;
    margin-bottom: 60px;
}

.location .button {
    width: 280px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 25px;
}

.achievement {
    margin-top: 140px;
}

.achievement .card {
    border: none;
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 220px;
    background-color: #f4f6fb;
    border-radius: 25px;
    padding: 40px 30px;
}

.achievement .card h4 {
    font-size: 24px;
    color: #424242;
    font-weight: 500;
    height: 60px;
    display: flex;
    align-items: center;
}

.achievement .card p {
    font-size: 18px;
    font-weight: 500;
    color: #9d9d9d;
    line-height: 120%;
}

.info.contacts {
    padding-top: 100px;
    padding-bottom: 100px;
}

.info.contacts .offer p {
    font-size: 20px;
    font-weight: 500;
    color: #232323;
    line-height: 120%;
}

.info.contacts .contacts p {
    font-size: 18px;
    font-weight: 500;
    color: #9d9d9d;
    line-height: 120%;
    text-align: left;
}

.commissioning {
    padding-top: 120px;
    padding-bottom: 120px;
}

.commissioning .title-caption {
    font-size: 24px;
    font-weight: 500;
    color: #424242;
}

.commissioning .card {
    width: 100%;
    height: 320px;
    border: none;
    padding: 30px 40px;
    background-color: #f4f6fb;
    background-image: url('../../media/img/modern-house.png');
    background-repeat: no-repeat;
    background-size: 90%;
    background-position: 0 100%;
    border-radius: 25px;
}

.commissioning .card.close {
    background-image: url('../../media/icons/padlock.png');
    background-repeat: no-repeat;
    background-size: 20px;
    background-position: 90% 10%;
}

.commissioning .card.close p {
    color: #c8cddb;
}

.commissioning .num {
    line-height: 100%;
}

.commissioning .caption {
    font-weight: 500;
    font-size: 24px;
    color: #9d9d9d;
    white-space: nowrap;
}

.commissioning .button {
    background-color: #c8cddb;
    width: 280px;
    height: 50px;
    border-radius: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.commissioning .button:hover {
    background-color: #f4325f;
}

.commissioning .date {
    font-size: 30px;
    font-weight: 500;
}

.strict-visible-slider .list {
    position: relative;
}

.strict-visible-slider .slide, .strict-visible-slider .list {
    width: 100%;
    height: 150px;
}

.strict-visible-slider .slide {
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
    transition-duration: 500ms;
}

.strict-visible-slider .slide.selected {
    opacity: 1;
}

.strict-visible-slider .slide img {
    width: 100%;
}

.strict-visible-slider .slide div:last-child img {
    max-height: 44%;
}

.strict-visible-slider .slide [class^="col"] {
    padding-right: calc(var(--bs-gutter-x) * .25);
    padding-left: calc(var(--bs-gutter-x) * .25);
}

.strict-visible-slider-progress {
    width: 250px;
}

section.plan {
    padding-top: 120px;
}

section.plan .card {
    width: 100%;
    border: none;
    background-color: #f4f6fb;
    padding: 30px 40px;
    border-radius: 25px;
}

section.plan .appartment-class {
    font-size: 50px;
    color: #2dccff;
    line-height: 100%;
    font-weight: 500;
}

section.plan .square {
    font-size: 24px;
    color: #424242;
    font-weight: 500;
    line-height: 110%;
}

section.plan img {
    max-width: 100%;
    height: auto;
}

section.plan .button {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #c8cddb;
    color: #fff;
    width: 80%;
    height: 45px;
    margin: auto;
}

section.plan .button:hover {
    background-color: #2dccff;
}

section.map {
    position: relative;
    margin-top: 120px;
}

#map {
    width: 100%;
    height: 800px;
}

[class*="ymaps-2"][class*="-ground-pane"] {
    filter: grayscale(1);
	-ms-filter: grayscale(1);
	-webkit-filter: grayscale(1);
	-moz-filter: grayscale(1); 
	-o-filter: grayscale(1);
}

section.map .controls {
    font-size: 36px;
    color: #fff;
    font-weight: 500;
    position: absolute;
    z-index: 3000;
    top: 10%;
    right: 10%;
}
/* ... */

